rnsc/tests/snapshots/error-parser-class_header-trailing_dot_method.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; .method isn't expected there. but as it is a directive, error should suggest to put it on a new line.
.class Class .method kababoom
.super java/lang/Object
.class_end
----- STDERR -----
[E-010] Error: unexpected trailing tokens after class definition
   ╭─[ test_data/integration/error/parser/class_header/trailing_dot_method.rns:2:14 ]
   │
 2 │ .class Class .method kababoom
   │             │────────┬───────  
   │             ╰────────────────── expected end of class definition here
   │                      │         
   │                      ╰───────── but found 2 trailing tokens
   │ 
   │ Help: If you are trying to declare a new '.method' directive, try to put it on a new line.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-010
───╯
----- HASH -----
not generated
