rnsc/tests/snapshots/error-parser-class_header-trailing_token_recovers.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MyClass SomethingElse
; SomethingElse is error, but the parser should recover and not report a warning for the missing .super directive
----- STDERR -----
[E-010] Error: unexpected trailing tokens after class definition
   ╭─[ test_data/integration/error/parser/class_header/trailing_token_recovers.rns:1:16 ]
   │
 1 │ .class MyClass SomethingElse
   │               │──────┬──────  
   │               ╰─────────────── expected end of class definition here
   │                      │        
   │                      ╰──────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-010
───╯
[W-001] Warning: missing super directive
   ╭─[ test_data/integration/error/parser/class_header/trailing_token_recovers.rns:1:1 ]
   │
 1 │ .class MyClass SomethingElse
   │ ───┬──  
   │    ╰──── class 'Some(Class(None, Spanned { value: "MyClass", span: Span { byte_start: 7, byte_end: 14, line: 0, col_start: 7, col_end: 14 } }))' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- HASH -----
not generated
