rnsc/tests/snapshots/error-parser-outside_class_directive-after_class_dir-abstract_keyword.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
; some comment
; another comment
abstract
----- STDERR -----
[E-008] Error: unexpected access flag after class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/after_class_dir/abstract_keyword.rns:7:1 ]
   │
 7 │ abstract
   │ ────┬───  
   │     ╰───── valid contexts for abstract access flag are: 'class definition', 'method definition'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
